--- a/ComputerVision/Model/PreprocessingFaceDetect.ipynb
+++ b/ComputerVision/Model/PreprocessingFaceDetect.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c49641d8-6b5e-42f1-8f2d-0e1b8645c707",
    "metadata": {},
    "outputs": [
@@ -39,16 +39,16 @@
     "faceDetectionProto = 'C:/Users/ASUS/Project/Data/deploy.prototxt'\n",
     "# mo hinh mo ta khuon mat \n",
     "faceDescriptorModel = 'C:/Users/ASUS/Project/Data/openface.nn4.small2.v1.t7'\n",
-    "# Su dung opencv Dnn dc mo hinh nhan dien khuon mat \n",
-    "detectorModel = cv2.dnn.readNetFromCaffe(faceDetectionProto,model) # can hoc readNet from \n",
-    "# doc mo hinh mo ta khuon mat tu Torch \n",
+    "# mo hinh nhan dien khuon mat \n",
+    "detectorModel = cv2.dnn.readNetFromCaffe(faceDetectionProto,model) \n",
+    "# mo hinh mo ta khuon mat tu Torch \n",
     "descriptorModel = cv2.dnn.readNetFromTorch(faceDescriptorModel)\n",
     "detectorModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "df0bbef9-8620-4cd0-8005-24705485c59e",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,6 @@
     }
    ],
    "source": [
-    "# danh sach hinh anh chuan bi \n",
     "faces = './Pillow_01/Faces'\n",
     "os.listdir(faces)"
    ]
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "008569e4-411c-46fa-ad4b-e436c5613b03",
    "metadata": {},
    "outputs": [
@@ -119,20 +118,16 @@
    ],
    "source": [
     "img = img1.copy()\n",
-    "# heigh and width cua anh\n",
     "h,w = img.shape[:2]\n",
     "# prepare input data for face detection\n",
     "blob = cv2.dnn.blobFromImage(img,1.0,(300,300),(104,177,123),swapRB = False,crop = False)\n",
-    "# thiet lap dau vao cho mo hinh \n",
     "detectorModel.setInput(blob)\n",
-    "detection = detectorModel.forward()\n",
-    "# kiem tra co khuon mat k \n",
+    "detection = detectorModel.forward() \n",
     "if len(detection) > 0:\n",
     "    i = np.argmax(detection[0,0,:,2])\n",
-    "    #chon khuon mat co confidence cao nhat\n",
     "    confidence = detection[0,0,i,2]\n",
     "    if confidence > 0.5:\n",
-    "        # tinh hop bao quanh khuon mat\n",
+    "        # ve hop bao quanh khuon mat\n",
     "        box = detection[0,0,i,3:7] * np.array([w,h,w,h])\n",
     "        (start_x,start_y,end_x,end_y) = box.astype('int')\n",
     "    # trich xuat khuon mat ra\n",
@@ -140,16 +135,14 @@
     "    \n",
     "    # chuan bi dau vao cho model \n",
     "    faceBlob = cv2.dnn.blobFromImage(roi,1/255,(96,96),(0,0,0),swapRB =True,crop = True)\n",
-    "    # thiet lap bien dau vao cho mo hinh\n",
     "    descriptorModel.setInput(faceBlob)\n",
-    "    # trich xuat dac trung \n",
     "    vectors = descriptorModel.forward()\n",
     "    print(vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a4fe999-d7ab-4458-b69e-c73db247323c",
    "metadata": {},
    "outputs": [],
@@ -158,44 +151,37 @@
     "def detect(path):\n",
     "    img1 = cv2.imread(path)\n",
     "    img = img1.copy()\n",
-    "    # heigh and width cua anh\n",
     "    h,w = img.shape[:2]\n",
-    "    # prepare input data for face detection\n",
+    "    # prepare input data \n",
     "    blob = cv2.dnn.blobFromImage(img,1.0,(300,300),(104,177,123),swapRB = False,crop = False)\n",
-    "    # thiet lap dau vao cho mo hinh \n",
     "    detectorModel.setInput(blob)\n",
     "    detection = detectorModel.forward()\n",
-    "    # kiem tra co khuon mat k \n",
     "    if len(detection) > 0:\n",
     "        #chon khuon mat co confidence cao nhat\n",
     "        i = np.argmax(detection[0,0,:,2])\n",
-    "        \n",
     "        confidence = detection[0,0,i,2]\n",
     "        if confidence > 0.5:\n",
-    "            # tinh hop bao quanh khuon mat\n",
+    "            # vve hop bao quanh khuon mat\n",
     "            box = detection[0,0,i,3:7] * np.array([w,h,w,h])\n",
     "            (start_x,start_y,end_x,end_y) = box.astype('int')\n",
-    "        # trich xuat khuon mat ra\n",
+    "        # trich xuat khuon mat \n",
     "        roi = img[start_y: end_y,start_x:end_x]\n",
     "        \n",
     "        # chuan bi dau vao cho model \n",
     "        faceBlob = cv2.dnn.blobFromImage(roi,1/255,(96,96),(0,0,0),swapRB =True,crop = True)\n",
-    "        # thiet lap bien dau vao cho mo hinh\n",
     "        descriptorModel.setInput(faceBlob)\n",
-    "        # trich xuat dac trung \n",
     "        vectors = descriptorModel.forward()\n",
     "        return vectors "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "81cd8ead-f59c-4cbb-a39d-9543c91c350d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#apply all image \n",
-    "# khoi tao dictionary\n",
     "data = dict(data= [],label = [])\n",
     "mydir = './Pillow_01/Faces'\n",
     "folders = os.listdir(mydir)\n",
@@ -205,10 +191,8 @@
     "    files = os.listdir(path)\n",
     "    for file in files:\n",
     "        try:\n",
-    "            # Gọi hàm trích xuất đặc trưng\n",
     "            vector = detect(path + '/'+file)\n",
     "            if vector is not None:\n",
-    "            #Thêm vector đặc trưng vào trong từ điển với nhãn là tên của thư mục\n",
     "                data['data'].append(vector)\n",
     "                data['label'].append(folder)\n",
     "        except:\n",
@@ -238,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4e73b435-3729-4acd-a3e3-886895b9dc36",
    "metadata": {},
    "outputs": [
@@ -256,23 +240,18 @@
     }
    ],
    "source": [
-    "# Tạo một series từ dictionary\n",
     "labelSeries = pd.Series(data['label'])\n",
-    "# Đếm số lần xuất hiện của mỗi nhãn\n",
     "labelCounts = labelSeries.value_counts()\n",
     "print(labelCounts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9e41e721-0271-4e4a-9180-873aa9ca7e19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Save data -> file\n",
-    "\n",
     "fileName = './Pillow_01/img/Results.pickle'\n",
     "pickle.dump(data, open(fileName, mode='wb'))"
    ]
