--- a/ComputerVision/Model/Training_data.ipynb.ipynb
+++ b/ComputerVision/Model/Training_data.ipynb.ipynb
@@ -2253,12 +2253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "97b74b1b-10a0-47a8-b81b-2610bd867957",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Parameter Tuning\n",
+    "#Parameter Tuning\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "model_grid = GridSearchCV(model_voting, param_grid={\n",
@@ -3649,12 +3649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c455cef2-aefd-464a-b399-c742926887e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Save Model\n",
     "pickle.dump(model_best_estimator, open(\"./Pillow_01/img/ml_face_person_identity.pkl\", mode='wb'))\n",
     "     "
    ]
